Correct postgresql setup

--- a/apps/postgres/configmap.yaml
+++ b/apps/postgres/configmap.yaml
@@ -7,12 +7,13 @@ metadata:
 data:
   postgresql.conf: |
     # Custom PostgreSQL config
+    listen_addresses = '*'
     random_page_cost = 1.0
+    hba_file = '/etc/postgres-config/pg_hba.conf'
 
   pg_hba.conf: |
     local   all             all                                     scram-sha-256
     host    all             all             10.244.0.0/16           scram-sha-256
     host    all             all             ::1/128                 scram-sha-256
     host    all             all             127.0.0.1/32            scram-sha-256
-    host    replication     replicator      10.244.0.0/16           scram-sha-256
 
