--- a/infra/minikube/secret.yaml
+++ b/infra/minikube/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: petunia
 type: Opaque
 stringData:
-  postgres-root-password: eb2675bb-f228-4689-8e75-3fb7d3674b76
+  postgres-root-password: postgres
  
