--- a/helm/secrets/templates/secret.yaml
+++ b/helm/secrets/templates/secret.yaml
@@ -5,3 +5,5 @@ metadata:
 type: Opaque
 stringData:
   postgres-root-password: {{ .Values.postgres.rootPassword | quote }}
+  keycloak-admin-password: {{ .Values.keycloak.adminPassword | quote }}
+
