--- a/helm/postgres/templates/configmap.yaml
+++ b/helm/postgres/templates/configmap.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "petunia-postgres.fullname" . }}
+  name: {{ include "postgres.fullname" . }}
+  labels:
+    {{- include "petunia-postgres.labels" . | nindent 4 }}
 data:
   postgresql.conf: |-
 {{ .Values.config.postgresql.conf | indent 4 }}
