--- a/helm/postgres/templates/service.yaml
+++ b/helm/postgres/templates/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "petunia-postgres.fullname" . }}
+  name: {{ include "postgres.fullname" . }}
   labels:
-    app: {{ include "petunia-postgres.name" . }}
+    {{- include "petunia-postgres.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
-      name: postgres
+      name: {{ .Values.service.portName }}
   selector:
-    app: {{ include "petunia-postgres.name" . }}
+    {{- include "petunia-postgres.selectorLabels" . | nindent 4 }}
 
