--- a/helm/postgres/Chart.yaml
+++ b/helm/postgres/Chart.yaml
@@ -4,4 +4,7 @@ description: A Helm chart for PostgreSQL in Project Petunia
 type: application
 version: 0.1.0
 appVersion: "17.5"
-
+dependencies:
+  - name: petunia-common
+    version: 0.1.0
+    repository: "file://../petunia-common"
