--- a/helm/postgres/templates/deployment.yaml
+++ b/helm/postgres/templates/deployment.yaml
@@ -3,18 +3,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "postgres.fullname" . }}
+  name: {{ include "petunia.fullname" . }}
   labels:
-    {{- include "petunia-postgres.labels" . | nindent 4 }}
+    {{- include "petunia.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "petunia-postgres.selectorLabels" . | nindent 6 }}
+      {{- include "petunia.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "petunia-postgres.selectorLabels" . | nindent 8 }}
+        {{- include "petunia.selectorLabels" . | nindent 8 }}
     spec:
       initContainers:
         - name: postgres-init
