--- a/helm/postgres/templates/service.yaml
+++ b/helm/postgres/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "postgres.fullname" . }}
+  name: {{ include "petunia.fullname" . }}
   labels:
-    {{- include "petunia-postgres.labels" . | nindent 4 }}
+    {{- include "petunia.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: {{ .Values.service.portName }}
   selector:
-    {{- include "petunia-postgres.selectorLabels" . | nindent 4 }}
+    {{- include "petunia.selectorLabels" . | nindent 4 }}
 
