--- a/helm/postgres/templates/configmap.yaml
+++ b/helm/postgres/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "postgres.fullname" . }}
   labels:
-    {{- include "petunia-postgres.labels" . | nindent 4 }}
+    {{- include "postgres.labels" . | nindent 4 }}
 data:
   postgresql.conf: |-
 {{ .Values.config.postgresql.conf | indent 4 }}
