--- a/helm/secrets/templates/secret.yaml
+++ b/helm/secrets/templates/secret.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: petunia
+  name: {{ include "petunia.fullname" . }}
+  labels:
+    {{- include "petunia.labels" . | nindent 4 }}
 type: Opaque
 stringData:
   postgres-root-password: {{ .Values.postgres.rootPassword | quote }}
+  keycloak-admin-user: {{ .Values.keycloak.adminUser | quote }}
   keycloak-admin-password: {{ .Values.keycloak.adminPassword | quote }}
 
