--- a/helm/keycloak/Chart.yaml
+++ b/helm/keycloak/Chart.yaml
@@ -22,5 +22,7 @@ sources:
   - https://github.com/keycloak/keycloak
   - https://artifacthub.io/packages/helm/bitnami/keycloak
 
-dependencies: []
-
+dependencies:
+  - name: petunia-common
+    version: 0.1.0
+    repository: "file://../petunia-common"
