--- a/helm/keycloak/values.yaml
+++ b/helm/keycloak/values.yaml
@@ -7,6 +7,11 @@ image:
 
 secretName: petunia
 
+keycloak:
+  hostname: https://auth.roskenet.de
+  adminUserKey: keycloak-admin-user
+  adminPasswordKey: keycloak-admin-password
+
 database:
   jdbcUrl: "jdbc:postgresql://postgres/keycloak"
   vendor: "postgres"
