--- a/helm/secrets/Chart.yaml
+++ b/helm/secrets/Chart.yaml
@@ -4,4 +4,7 @@ description: A Helm chart for shared secrets
 type: application
 version: 0.1.0
 appVersion: "1.0"
-
+dependencies:
+  - name: petunia-common
+    version: 0.1.0
+    repository: "file://../petunia-common"
