--- a/helm/shared/templates/secret.yaml
+++ b/helm/shared/templates/secret.yaml
@@ -9,4 +9,5 @@ stringData:
   postgres-root-password: {{ .Values.postgres.rootPassword | quote }}
   keycloak-admin-user: {{ .Values.keycloak.adminUser | quote }}
   keycloak-admin-password: {{ .Values.keycloak.adminPassword | quote }}
-
+  keycloak-database-user: {{ .Values.keycloak.databaseUser | quote }}
+  keycloak-database-password: {{ .Values.keycloak.databasePassword | quote }}
