--- a/helm/keycloak/templates/service.yaml
+++ b/helm/keycloak/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "keycloak.fullname" . }}
+  name: {{ include "petunia.fullname" . }}
   labels:
-    app: {{ include "keycloak.name" . }}
+    {{- include "petunia.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ include "keycloak.name" . }}
+    {{- include "petunia.selectorLabels" . | nindent 4 }}
 
