--- a/helm/keycloak/values-minikube.yaml
+++ b/helm/keycloak/values-minikube.yaml
@@ -8,9 +8,11 @@ image:
 secretName: petunia
 
 keycloak:
-  hostname: https://auth.roskenet.de
+  hostname: http://keycloak
   adminUserKey: keycloak-admin-user
   adminPasswordKey: keycloak-admin-password
+  databaseUserKey: keycloak-database-user
+  databasePasswordKey: keycloak-database-password
 
 database:
   jdbcUrl: "jdbc:postgresql://postgres/keycloak"
