--- a/helm/postgres/templates/pvc.yaml
+++ b/helm/postgres/templates/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.persistence.name }}
+  name: {{ include "petunia.persistenceName" . }}
   labels:
     {{- include "petunia.labels" . | nindent 4 }}
 spec:
@@ -13,5 +13,5 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
-  storageClassName: {{ .Values.persistence.storageClassName }}
+  storageClassName: {{ include "petunia.storageClassName" . }}
 {{- end }}
