--- a/helm/postgres/values-k3s.yaml
+++ b/helm/postgres/values-k3s.yaml
@@ -14,14 +14,14 @@ secrets:
 
 persistence:
   enabled: true
-  name: postgres-data
-  storageClassName: postgres-data
+  name: data
+  storageClassName: data
   accessModes:
     - ReadWriteOnce
   size: 2Gi
   hostPath:
     enabled: true
-    path: /var/lib/postgresql/data
+    basePath: /data
   reclaimPolicy: Retain
 
 config:
@@ -34,7 +34,7 @@ config:
   pg_hba:
     conf: |
       local   all             all                                     scram-sha-256
-      host    all             all             10.244.0.0/16           scram-sha-256
+      host    all             all             10.42.0.0/16            scram-sha-256
       host    all             all             ::1/128                 scram-sha-256
       host    all             all             127.0.0.1/32            scram-sha-256
 
