--- a/helm/shared/Chart.yaml
+++ b/helm/shared/Chart.yaml
@@ -4,7 +4,4 @@ description: A Helm chart for shared values
 type: application
 version: 0.1.0
 appVersion: "1.0"
-dependencies:
-  - name: petunia-common
-    version: 0.1.0
-    repository: "file://../petunia-common"
+dependencies: []
