--- a/helm/shared/templates/ingress.yaml
+++ b/helm/shared/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
               name: keycloak
               port:
                 number: 8080
-  - host: www.roskenet.de
+  - host: {{ .Values.polonium.url }}
     http:
       paths:
         - path: /
