--- a/helm/postgres/templates/deployment.yaml
+++ b/helm/postgres/templates/deployment.yaml
@@ -1,5 +1,3 @@
-{{- include "petunia.checkSecret" . }}
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,10 +21,7 @@ spec:
             runAsUser: 0
           env:
             - name: POSTGRES_PASSWORD
-              valueFrom: 
-                secretKeyRef:
-                  name: "{{ .Values.secrets.name }}"
-                  key: "{{ .Values.secrets.passwordKey }}"
+              value: "postgres"
           command:
             - sh
             - -c
