--- a/helm/ingress/values-minikube.yaml
+++ b/helm/ingress/values-minikube.yaml
@@ -3,27 +3,64 @@
 tls:
   enabled: false
 
-keycloak:
-  url: keycloak
-
-polonium:
-  url: polonium
-
-nakadi:
-  expose: true
-  url: nakadi
-
-nakadiui:
-  expose: true
-  url: nakadi-ui
-
-sonar:
-  expose: true
-  url: sonar
-  service:
-    name: sonarqube
-    port: 9000
-
-villadiana:
-  expose: true
-  url: villadiana
+hosts:
+  - host: nakadi
+    paths:
+      - path: /
+        service:
+          name: nakadi
+          port: 80
+  - host: nakadi-ui
+    paths:
+      - path: /
+        service:
+          name: nakadi-ui
+          port: 3000
+  - host: sonar
+    paths:
+      - path: /
+        service:
+          name: sonarqube
+          port: 9000
+  - host: keycloak
+    paths:
+      - path: /
+        service:
+          name: keycloak
+          port: 8080
+  - host: polonium
+    paths:
+      - path: /
+        service:
+          name: polonium
+          port: 8080
+  - host: villadiana
+    paths:
+      - path: /ws
+        service:
+          name: villadiana
+          port: 8080
+      - path: /api
+        service:
+          name: villadiana
+          port: 8080
+      - path: /oauth2
+        service:
+          name: villadiana
+          port: 8080
+      - path: /login
+        service:
+          name: villadiana
+          port: 8080
+      - path: /logout
+        service:
+          name: villadiana
+          port: 8080
+      - path: /me
+        service:
+          name: villadiana
+          port: 8080
+      - path: /
+        service:
+          name: alpicola
+          port: 80
