Imprive front controller ingress

--- a/helm/ingress/values-minikube.yaml
+++ b/helm/ingress/values-minikube.yaml
@@ -23,18 +23,21 @@ hosts:
           name: sonarqube
           port: 9000
   - host: keycloak
+    enabled: true
     paths:
       - path: /
         service:
           name: keycloak
           port: 8080
   - host: polonium
+    enabled: true
     paths:
       - path: /
         service:
           name: polonium
           port: 8080
   - host: villadiana
+    enabled: false
     paths:
       - path: /ws
         service:
