--- a/helm/ingress/values-k3s.yaml
+++ b/helm/ingress/values-k3s.yaml
@@ -1,23 +1,48 @@
-#
+# The ingress front controller for k3s
 
 tls:
   enabled: true
 
-keycloak:
-  url: auth.roskenet.de
-
-polonium:
-  url: www.roskenet.de
-
-nakadi:
-  expose: false
-
-nakadiui:
-  expose: false
-
-sonar:
-  expose: false
-
-villadiana:
-  expose: true
-  url: petunia.roskenet.de
+hosts:
+  - host: auth.roskenet.de
+    paths:
+      - path: /
+        service:
+          name: keycloak
+          port: 8080
+  - host: www.roskenet.de
+    paths:
+      - path: /
+        service:
+          name: polonium
+          port: 8080
+  - host: petunia.roskenet.de
+    paths:
+      - path: /ws
+        service:
+          name: villadiana
+          port: 8080
+      - path: /api
+        service:
+          name: villadiana
+          port: 8080
+      - path: /oauth2
+        service:
+          name: villadiana
+          port: 8080
+      - path: /login
+        service:
+          name: villadiana
+          port: 8080
+      - path: /logout
+        service:
+          name: villadiana
+          port: 8080
+      - path: /me
+        service:
+          name: villadiana
+          port: 8080
+      - path: /
+        service:
+          name: alpicola
+          port: 80
