--- a/helm/polonium/values.yaml
+++ b/helm/polonium/values.yaml
@@ -5,10 +5,10 @@ image:
   tag: "3.2.0"
   pullPolicy: IfNotPresent
 
-service:
-  type: ClusterIP
-  port: 8080
-
-containerPort: 8080
+ports:
+  - name: http
+    type: ClusterIP
+    containerPort: 8080
+    servicePort: 8080
 
 resources: {}
