--- a/helm/sonar/values-minikube.yaml
+++ b/helm/sonar/values-minikube.yaml
@@ -9,6 +9,16 @@ service:
   type: ClusterIP
   port: 9000
 
+
+postgres:
+  host: postgres
+  secretName: postgres
+  rootUser: postgres
+  rootPasswordKey: postgres-root-password
+  databaseName: sonar
+  databaseUser: sonar
+  databasePassword: sonar
+
 env:
   SONAR_JDBC_URL: "jdbc:postgresql://postgres/sonar"
   SONAR_JDBC_USERNAME: "sonar"
