--- a/helm/kafka/templates/service.yaml
+++ b/helm/kafka/templates/service.yaml
@@ -12,3 +12,6 @@ spec:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
       name: client
+    - port: 9093
+      targetPort: 9093
+      name: controller
