--- a/helm/kafka/values-k3s.yaml
+++ b/helm/kafka/values-k3s.yaml
@@ -7,10 +7,13 @@ image:
   pullPolicy: IfNotPresent
 
 kafka:
-  brokerId: 0
-  zookeeperConnect: zookeeper:2181
+  nodeId: 0
+  processRoles: broker,controller
+  controllerListenerNames: CONTROLLER
+  listeners: PLAINTEXT://:9092,CONTROLLER://:9093
   advertisedListeners: PLAINTEXT://kafka:9092
-  listenerSecurityProtocolMap: PLAINTEXT:PLAINTEXT
+  listenerSecurityProtocolMap: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+  controllerQuorumVoters: 0@kafka:9093
 
 service:
   type: ClusterIP
