--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,110 @@
+### IntelliJ IDEA ###
 .idea/
+*.iml
+*.iws
+*.ipr
+out/
+.idea_modules/
+
+### Eclipse ###
+.classpath
+.project
+.settings/
+bin/
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+### Gradle ###
+.gradle/
+build/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+.gradletasknamecache
+
+### Java ###
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
+replay_pid*
+
+### Kotlin ###
+.kotlin/
+
+### Spring Boot ###
+spring-shell.log
+application-local.yml
+application-local.properties
+
+### OS Files ###
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
+
+### Logs ###
+logs/
+*.log
+
+### Temporary Files ###
+*.tmp
+*.bak
+*.swp
+*.swo
+*~.nib
+
+### Package Files ###
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+### Database ###
+*.db
+*.sqlite
+*.h2.db
+
+### Security ###
+*.key
+*.pem
+*.p12
+*.jks
+.env
+.env.local
