--- a/bank/src/main/resources/application.yml
+++ b/bank/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
+  flyway:
+    enabled: true
 server:
   port: 8082
