--- a/bank/src/test/resources/application.yml
+++ b/bank/src/test/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:bank;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:bank;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password: sa
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
   flyway:
-    enabled: true
-    locations: classpath:db/migration
+    enabled: false
