--- a/exchange/pom.xml
+++ b/exchange/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.projectpetunia</groupId>
+        <groupId>de.roskenet.petunia</groupId>
         <artifactId>project-petunia</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
